...
              ),
              Padding(
                padding:
                const EdgeInsets.symmetric(horizontal: 8, vertical: 16.0),
                child: Center(
                  child: ElevatedButton(
                    key: const Key('loginButton'),
                    onPressed: () {
                      Api().login(
                        usernameController.text,
                        passwordController.text,
                        context,
                      );
...
              ),
              Padding(
                padding:
                const EdgeInsets.symmetric(horizontal: 0, vertical: 0),
                child: Center(
                  child: TextButton(
                    key: const Key('registrationButton'),
                    onPressed: () {
                      Navigator.push(
                          context, MaterialPageRoute(builder: (context) => const Registration()));
                    },
                    child: const Text('Sign up!'),
                  ),
...
